# nameless_sfml_game

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  setup.sh
.githooks/: pre-commit
resources/shaders/post_process/: vignette.frag
src/: main.cpp
